# RobustClutterUnknownNoiseDP

./: .gitignore  README.md  pyproject.toml
.github/workflows/: benchmark-large.yml  benchmark.yml  tests.yml
docs/: research_scope.md
examples/: run_structured_clutter_experiment.py  structured_clutter_birth_suppression.py
scripts/: analyze_benchmark_results.py
src/robust_clutter_dp/: __init__.py  cli.py  clutter.py  confirmation.py  dp_clutter.py  experiment.py  metrics.py  reporting.py  scenarios.py  scoring.py  simulation.py  tracklet.py  tracklet_merge.py
tests/: test_cli.py  test_dp_clutter.py  test_metrics.py  test_reporting.py  test_scenarios.py  test_scoring_confirmation.py  test_tracklet_experiment.py  test_tracklet_merge.py
