[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "robust-clutter-unknown-noise-dp"
version = "0.1.0"
description = "Prototype components for robust target-vs-clutter competition in DP-based multitarget tracking."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Florian Pfaff"}]
dependencies = ["numpy>=1.23"]

[project.optional-dependencies]
test = ["pytest>=7"]

[project.scripts]
robust-clutter-dp-experiment = "robust_clutter_dp.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
